Use enum_help to translate elements of enum into Japanese

--- a/app/views/interviews/_interview.html.erb
+++ b/app/views/interviews/_interview.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= interview.start_time.strftime("%Y年%m月%d日(#{%w(日 月 火 水 木 金 土)[interview.start_time.wday]}) %H時%M分") %></td>
-  <td><%= interview.status %></td>
+  <td><%= interview.status_i18n %></td>
   <td></td>
   <td></td>
 </tr>
