--- a/app/views/interviews/new.html.erb
+++ b/app/views/interviews/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Interviews#new</h1>
-<p>Find me in app/views/interviews/new.html.erb</p>
+<h1>面接候補日の追加</h1>
+
+<%= form_for(@interview, url: user_interviews_path) do |f| %>
+  <div class="field">
+    <%= f.label :start_time, '開始時間' %><br />
+    <%= f.datetime_select :start_time %>
+  </div>
+  <br />
+  <div class="actions">
+    <%= f.submit "登録", class: "btn btn-primary" %>
+  </div>
+<% end %>
