--- a/app/views/interviews/new.html.erb
+++ b/app/views/interviews/new.html.erb
@@ -1,12 +1,3 @@
 <h1>面接候補日の追加</h1>
 
-<%= form_for(@interview, url: user_interviews_path) do |f| %>
-  <div class="field">
-    <%= f.label :start_time, '開始時間' %><br />
-    <%= f.datetime_select :start_time %>
-  </div>
-  <br />
-  <div class="actions">
-    <%= f.submit "登録", class: "btn btn-primary" %>
-  </div>
-<% end %>
+<%= render 'interview_form', interview: @interview %>
