--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -1,17 +1,21 @@
 <h1><%= current_user.name %>さんの面接一覧</h1>
 
-<table class="table table-bordered table-hover table-striped table-condensed text-center">
-  <thead>
-    <tr>
-      <th class="text-center">面接開始時間</th>
-      <th class="text-center">承認状態</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <%= render partial: 'interview', collection: @interviews %>
-  </tbody>
-</table>
+<% if @interviews.any? %>
+  <table class="table table-bordered table-hover table-striped table-condensed text-center">
+    <thead>
+      <tr>
+        <th class="text-center">面接開始時間</th>
+        <th class="text-center">承認状態</th>
+        <th colspan="2"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= render partial: 'interview', collection: @interviews %>
+    </tbody>
+  </table>
+<% else %>
+  <p class="alert alert alert-danger">候補日が登録されていません。</p>
+<% end %>
 
 <div class="row">
   <div class="col-sm-10">
