--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -1,10 +1,10 @@
-<h1><%= current_user.name %>さんの面接一覧</h1>
+<h1><%= current_user.name %>さんの面談一覧</h1>
 
 <% if @interviews.any? %>
   <table class="table table-bordered table-hover table-striped table-condensed text-center">
     <thead>
       <tr>
-        <th class="text-center">面接開始時間</th>
+        <th class="text-center">開始時間</th>
         <th class="text-center">承認状態</th>
         <th colspan="2"></th>
       </tr>
