--- a/app/views/interviews/_interview_form.html.erb
+++ b/app/views/interviews/_interview_form.html.erb
@@ -6,6 +6,6 @@
   </div>
   <br />
   <div class="actions">
-    <%= f.submit "追加", class: "btn btn-primary" %>
+    <%= f.submit button, class: "btn btn-primary" %>
   </div>
 <% end %>
