--- a/app/views/interviews/new.html.erb
+++ b/app/views/interviews/new.html.erb
@@ -1,3 +1,3 @@
 <h1>面談候補日の追加</h1>
 
-<%= render 'interview_form', interview: @interview %>
+<%= render 'interview_form', interview: @interview, button: '追加' %>
