feat: Add User#age

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= user.name %></td>
   <td><%= user.email %></td>
-  <td>user.age（要修正）</td>
+  <td><%= user.age %></td>
   <td><%= user.gender %></td>
   <td><%= user.school %></td>
   <td>面接日時（要修正）</td>
