refactor: Modify ja.yml to display gender in Japanese

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,7 +2,7 @@
   <td><%= user.name %></td>
   <td><%= user.email %></td>
   <td><%= user.age %></td>
-  <td><%= user.gender %></td>
+  <td><%= user.gender_i18n %></td>
   <td><%= user.school %></td>
   <td>面接日時（要修正）</td>
   <td><%= button_to '面接一覧', user_interviews_path(user.id), method: :get, class: "btn btn-default" %></td>
