--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -4,6 +4,6 @@
   <td><%= user.age %></td>
   <td><%= user.gender_i18n %></td>
   <td><%= user.school %></td>
-  <td>面接日時（要修正）</td>
+  <td><%= user.interviews.approved.first.start_time.strftime("%Y年%m月%d日(#{%w(日 月 火 水 木 金 土)[user.interviews.approved.first.start_time.wday]}) %H時%M分") if user.interviews.approved.count > 0 %></td>
   <td><%= button_to '面接一覧', user_interviews_path(user.id), method: :get, class: "btn btn-default" %></td>
 </tr>
