--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -1,26 +1,7 @@
-<h1><%= current_user.name %>さんの面談一覧</h1>
+<h1><%= @user.name %>さんの面談一覧</h1>
 
-<% if @interviews.any? %>
-  <table class="table table-bordered table-hover table-striped table-condensed text-center">
-    <thead>
-      <tr>
-        <th class="text-center">開始時間</th>
-        <th class="text-center">承認状態</th>
-        <th colspan="2"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <%= render partial: 'interview', collection: @interviews %>
-    </tbody>
-  </table>
+<% if @user.id == current_user.id %>
+  <%= render partial: 'mine', interviews: @interviews%>
 <% else %>
-  <p class="alert alert alert-danger">候補日が登録されていません。</p>
+  <%= render partial: 'others', interviews: @interviews %>
 <% end %>
-
-<div class="row">
-  <div class="col-sm-10">
-  </div>
-  <div class="col-sm-2">
-    <%= button_to '候補日追加', new_user_interview_path, method: :get, class: "btn btn-primary" %>
-  </div>
-</div>
