--- a/app/views/interviews/_others.html.erb
+++ b/app/views/interviews/_others.html.erb
@@ -1,18 +1,18 @@
-<h3>現在の面接日程</h3>
+<h3>現在の面談日程</h3>
 <% if @interviews.approved.any? %>
-  <p><strong><%= interview_datetime(@interviews.approved.first.start_time) %></strong>に面接が設定されています。</p>
+  <p><strong><%= interview_datetime(@interviews.approved.first.start_time) %></strong>に面談が設定されています。</p>
 <% else %>
-  <p>面接が設定されていません。 </p>
+  <p>面談が設定されていません。 </p>
 <% end %>
 <hr>
-<h3>その他の面接候補日</h3>
+<h3>その他の面談候補日</h3>
 <% not_approved_interviews = @interviews.where.not(status: :approved) %>
 <% if not_approved_interviews.any? %>
-  <p>面接日程を変更する場合は以下から選んでください。</p>
+  <p>面談日程を変更する場合は以下から選んでください。</p>
   <% not_approved_interviews.each do |interview| %>
     <%= button_to interview_datetime(interview.start_time), user_interview_path(interview.user_id, interview.id), method: :patch, class: "btn btn-primary" %>
     <br />
   <% end %>
 <% else %>
-  <p>面接候補日が登録されていません。</p>
+  <p>面談候補日が登録されていません。</p>
 <% end %>
