--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,5 +5,5 @@
   <td><%= user.gender_i18n %></td>
   <td><%= user.school %></td>
   <td><%= interview_datetime(user.interviews.approved.first.start_time) if user.interviews.approved.count > 0 %></td>
-  <td><%= button_to '面接一覧', user_interviews_path(user.id), method: :get, class: "btn btn-default" %></td>
+  <td><%= button_to '面談一覧', user_interviews_path(user.id), method: :get, class: "btn btn-default" %></td>
 </tr>
