refactor: Refactor a little

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -4,6 +4,6 @@
   <td><%= user.age %></td>
   <td><%= user.gender_i18n %></td>
   <td><%= user.school %></td>
-  <td><%= interview_datetime(user.interviews.approved.first.start_time) if user.interviews.approved.count > 0 %></td>
+  <td><%= interview_datetime(user.interviews.approved.first.start_time) if user.interviews.approved.any? %></td>
   <td><%= button_to '面談一覧', user_interviews_path(user.id), method: :get, class: "btn btn-default" %></td>
 </tr>
