refactor: Modify alert type of my interview list

--- a/app/views/interviews/_mine.html.erb
+++ b/app/views/interviews/_mine.html.erb
@@ -12,7 +12,7 @@
     </tbody>
   </table>
 <% else %>
-  <p class="alert alert alert-danger">候補日が登録されていません。</p>
+  <p class="alert alert-info">候補日が登録されていません。</p>
 <% end %>
 
 <div class="row">
