feat: Add InterviewsController#request_interview to send request mail to approval of interview

--- a/app/views/user_mailer/request_interview.text.erb
+++ b/app/views/user_mailer/request_interview.text.erb
@@ -1,6 +1,3 @@
-<!-- 既存システムとの連結までcurrent_userを固定で設定しておく -->
-<% current_user = User.find(2) %>
-
-<%= current_user.name %>さんの面談希望日が決定しました。
+<%= @from_user.name %>さんの面談希望日が決定しました。
 以下のURLから、面談日時の承認をお願いします。
-<%= user_interviews_url(current_user.id) %>
+<%= user_interviews_url(@from_user.id) %>
