--- a/app/views/interviews/_mine.html.erb
+++ b/app/views/interviews/_mine.html.erb
@@ -19,7 +19,7 @@
   <div class="col-sm-10">
     <%= form_tag user_request_interview_path do %>
       <%= select_tag :email, options_for_select(@users_emails) %>
-      <%= button_to '申請', '#', class: "btn btn-primary" %>
+      <%= button_tag '申請', class: "btn btn-primary" %>
     <% end %>
   </div>
   <div class="col-sm-2">
